--- a/sass/test.scss
+++ b/sass/test.scss
@@ -163,6 +163,22 @@ a {
   text-align: center;
 }
 
+.partner-icon {
+    position: relative;
+}
+
+.fa-music {
+    color: white;
+    background-color: #FF6666;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 120px;
+    right: 80px;
+    border: 3px solid white;
+    border-radius: 50%;
+}
+
 .border_radius {
     border-radius: 50%;
     width: 150px;
