--- a/stylesheets/test.css
+++ b/stylesheets/test.css
@@ -185,6 +185,24 @@ a {
 }
 
 /* line 166, ../sass/test.scss */
+.partner-icon {
+  position: relative;
+}
+
+/* line 170, ../sass/test.scss */
+.fa-music {
+  color: white;
+  background-color: #FF6666;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 120px;
+  right: 80px;
+  border: 3px solid white;
+  border-radius: 50%;
+}
+
+/* line 182, ../sass/test.scss */
 .border_radius {
   border-radius: 50%;
   width: 150px;
