--- a/sass/test.scss
+++ b/sass/test.scss
@@ -1,11 +1,15 @@
 @import "compass";
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
 }
 
 .container {
-    width: 1170px;
+    width: 100%;
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -106,7 +110,7 @@ a {
   .top-txt {
     position: absolute;
     top: 190px;
-    left: 30px;
+    left: 90px;
     padding: 3px 20px;
     border-radius: 20px;
     color: white;
@@ -120,7 +124,7 @@ a {
   .title-txt {
     position: absolute;
     top: 210px;
-    left: 30px;
+    left: 90px;
     letter-spacing: 2px;
     width: 100%;
     color: white;
@@ -132,7 +136,7 @@ a {
   .txt-contents {
     position: absolute;
     top: 290px;
-    left: 30px;
+    left: 90px;
     width: 100%;
     color: white;
     letter-spacing: 1px;
@@ -148,7 +152,7 @@ a {
   }
 
   .partners {
-    padding: 10px 40px;
+    padding: 10px 300px;
 }
 
 .partner {
@@ -158,7 +162,8 @@ a {
 
 .partner-wrapper {
   height: 500px;
-  padding-bottom: 70px;
+  padding-top: 150px;
+  padding-bottom: 120px;
   background-color: #f7f7f7;
   text-align: center;
 }
@@ -168,19 +173,65 @@ a {
 }
 
 .fa-music {
-    color: white;
+    color: #f7f7f7;
     background-color: #FF6666;
-    width: 30px;
-    height: 30px;
+    padding: 6px;
     position: absolute;
-    top: 120px;
+    top: 90px;
     right: 80px;
-    border: 3px solid white;
+    border: 3px solid #f7f7f7;
     border-radius: 50%;
+}
+
+.fa-pencil-alt {
+    color: #f7f7f7;
+    background-color: #66CDAA;
+    padding: 6px;
+    position: absolute;
+    top: 90px;
+    right: 80px;
+    border: 3px solid #f7f7f7;
+    border-radius: 50%;
+}
+
+.fa-camera {
+    color: #f7f7f7;
+    background-color: #FFA500	;
+    padding: 6px;
+    position: absolute;
+    top: 90px;
+    right: 80px;
+    border: 3px solid #f7f7f7;
+    border-radius: 50%;
+}
+
+.fa-plane {
+    color: #f7f7f7;
+    background-color: #00BFFF;
+    padding: 6px;
+    position: absolute;
+    top: 90px;
+    right: 80px;
+    border: 3px solid #f7f7f7;
+    border-radius: 50%;
+    transform: rotate( 320deg );
 }
 
 .border_radius {
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
 }
+
+.partner-txt {
+    font-family: sans-serif
+}
+
+.partner-txt h3 {
+    font-weight: 600;
+}
+
+.partner-txt p {
+    opacity: 0.6;
+}
+
