--- a/stylesheets/test.css
+++ b/stylesheets/test.css
@@ -29,7 +29,7 @@ body {
 .top-wrapper h1 {
   font-size: 60px;
   letter-spacing: 5px;
-  line-height: 14px;
+  line-height: 60px;
   font-weight: 300;
 }
 
@@ -183,7 +183,7 @@ a {
 
 /* line 163, ../sass/test.scss */
 .partner-wrapper {
-  height: 500px;
+  height: 620px;
   padding-top: 150px;
   padding-bottom: 120px;
   background-color: #f7f7f7;
@@ -264,4 +264,323 @@ a {
 /* line 234, ../sass/test.scss */
 .partner-txt p {
   opacity: 0.6;
+}
+
+/* line 238, ../sass/test.scss */
+.other-partner {
+  clear: both;
+  padding: 50px;
+  margin: 0 auto;
+  width: 18%;
+}
+
+/* line 245, ../sass/test.scss */
+.other-partner a {
+  padding: 12px 12px;
+  font-size: 15px;
+  color: #FF6666;
+  border: 2px solid #FF6666;
+  border-radius: 70px;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+/* line 255, ../sass/test.scss */
+.other-partner a:hover {
+  opacity: 0.8;
+}
+
+/* line 259, ../sass/test.scss */
+.activity-wrapper {
+  padding: 200px;
+  padding-top: 0;
+  padding-bottom: 20px;
+  text-align: center;
+  background-color: #f7f7f7;
+}
+
+/* line 267, ../sass/test.scss */
+.activities {
+  padding: 150px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  text-align: center;
+  justify-content: center;
+  grid-gap: 10px 0px;
+}
+
+/* line 279, ../sass/test.scss */
+.activities img {
+  display: flex;
+  margin: 0;
+}
+
+/* line 284, ../sass/test.scss */
+.activity-icon {
+  position: relative;
+}
+
+/* line 288, ../sass/test.scss */
+.activity-text1 {
+  position: absolute;
+  top: 140px;
+  left: 90px;
+  color: white;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+/* line 297, ../sass/test.scss */
+.activity-text2 {
+  position: absolute;
+  top: 140px;
+  left: 90px;
+  color: white;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+/* line 306, ../sass/test.scss */
+.activity-text3 {
+  position: absolute;
+  top: 140px;
+  left: 50px;
+  color: white;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+/* line 315, ../sass/test.scss */
+.activity-text4 {
+  position: absolute;
+  top: 140px;
+  left: 130px;
+  color: white;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+/* line 324, ../sass/test.scss */
+.activity-text5 {
+  position: absolute;
+  top: 140px;
+  left: 230px;
+  color: white;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+/* line 333, ../sass/test.scss */
+.activity-text6 {
+  position: absolute;
+  top: 140px;
+  left: 230px;
+  color: white;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+/* line 342, ../sass/test.scss */
+.activity-text7 {
+  position: absolute;
+  top: 140px;
+  left: 120px;
+  color: white;
+  font-size: 15px;
+  font-family: sans-serif;
+}
+
+/* line 351, ../sass/test.scss */
+.activity1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+/* line 356, ../sass/test.scss */
+.activity2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+/* line 361, ../sass/test.scss */
+.activity3 {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+}
+
+/* line 366, ../sass/test.scss */
+.activity4 {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+/* line 371, ../sass/test.scss */
+.activity5 {
+  grid-column: 2 / 4;
+  grid-row: 2/3;
+}
+
+/* line 376, ../sass/test.scss */
+.activity6 {
+  grid-column: 1 / 3;
+  grid-row: 3 / 4;
+}
+
+/* line 381, ../sass/test.scss */
+.activity7 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
+
+/* line 386, ../sass/test.scss */
+.form-wrapper {
+  height: 500px;
+  padding-top: 40px;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+
+/* line 393, ../sass/test.scss */
+.form-wrapper h1 {
+  font-family: sans-serif;
+  font-weight: 100;
+  font-size: 25px;
+  display: inline-block;
+  text-align: center;
+}
+
+/* line 401, ../sass/test.scss */
+.form-wrapper p {
+  font-family: sans-serif;
+  font-weight: 100;
+  font-size: 20px;
+  padding-top: 15px;
+  color: gray;
+}
+
+/* line 409, ../sass/test.scss */
+.form-wrapper a {
+  font-family: sans-serif;
+  font-weight: 700;
+  background-color: #FF6666;
+  font-size: 12px;
+  color: white;
+  padding: 3px 30px;
+  border: 8px solid #FF6666;
+  border-radius: 70px;
+}
+
+/* line 420, ../sass/test.scss */
+.form-wrapper a:hover {
+  opacity: 0.8;
+}
+
+/* line 424, ../sass/test.scss */
+.forms {
+  display: inline-block;
+  text-align: center;
+}
+
+/* line 429, ../sass/test.scss */
+.txt-form {
+  padding: 12px 5px;
+}
+
+/* line 433, ../sass/test.scss */
+.footer-wrapper {
+  height: 260px;
+  padding-top: 10px;
+  background-color: #f7f7f7;
+  text-align: center;
+  margin-top: 0px;
+  border-top: solid 2px #FF6666;
+}
+
+/* line 442, ../sass/test.scss */
+.footers {
+  padding: 10px 300px;
+}
+
+/* line 446, ../sass/test.scss */
+.footer-txt {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 25%;
+}
+
+/* line 453, ../sass/test.scss */
+.footer-txt ul {
+  list-style: none;
+}
+
+/* line 457, ../sass/test.scss */
+ul li {
+  text-align: left;
+}
+
+/* line 461, ../sass/test.scss */
+li a {
+  font-family: sans-serif;
+  color: gray;
+  opacity: 0.7;
+  line-height: 25px;
+}
+
+/* line 468, ../sass/test.scss */
+ul li:hover {
+  opacity: 0.5;
+}
+
+/* line 472, ../sass/test.scss */
+ul {
+  margin-top: 0;
+}
+
+/* line 476, ../sass/test.scss */
+.company {
+  padding-right: 125px;
+}
+
+/* line 480, ../sass/test.scss */
+.dreamshare {
+  color: #FF6666;
+}
+
+/* line 484, ../sass/test.scss */
+.footer-txt h1 {
+  font-size: 15px;
+  font-weight: 500;
+  font-family: sans-serif;
+}
+
+/* line 490, ../sass/test.scss */
+.part, .design, .comp {
+  color: gray;
+}
+
+/* line 494, ../sass/test.scss */
+.design {
+  padding-left: 40px;
+  margin-bottom: 5px;
+}
+
+/* line 499, ../sass/test.scss */
+.footer-txt h3 {
+  font-size: 10px;
+  font-family: sans-serif;
+  opacity: 0.3;
+}
+
+/* line 505, ../sass/test.scss */
+.part {
+  padding-right: 180px;
+}
+
+/* line 509, ../sass/test.scss */
+.design-txt {
+  padding-left: 100px;
 }
